--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,6 +20,7 @@ steps:
       - "--cpu=1"
       - "--memory=2048Mi"
       - "--allow-unauthenticated"
+      - "--set-secrets=GCS_BUCKET_NAME=gcs_bucket_name:latest, CREDENTIALS_PATH=credentials_path:latest"
 images:
   - "us-central1-docker.pkg.dev/$PROJECT_ID/pawpal-artifact/pawpal-image:$COMMIT_SHA"
 logsBucket: "gs://pawpal-logs/logs"
